2010-12-01 Roman
- DAQ.BFN: Some fixes and debug disable.
- FIX:UI.VCAEngine: Parent widget name set is fixed for included widget's copy of a template page.


2010-11-30 Roman
- !!:Transport, Transport.*: The function TTransportS::traf2str() is added for traffic counter convert to string like "12.5KiB".
    New function is used everywhere.
- FIX:Transport.Sockets: Close client connections at timeout of life time is fixed for connected but no data receiving connections.
- FIX:DB, DB.*: Disable access for other to view DB's tables content and DB's address field update.


2010-11-29 Roman
- !!:SYS: New function TSYS::time2str() is added for convert time interval to string like "1hour 23min 10sec". The function is used everywhere.
- FIX:DB, DB.*: Disable access for other to view DB's tables content and DB's address field.
- DAQ.BFN: Alarms reading and put it to OpenSCADA archive is added.


2010-11-25 Roman
- UI.VCAEngine: Context help is added for attributes of primitives: "Diageam", "Protocol" and "Document".
- UI.Vision: Full text attributes edition of a widget into separated window with wide place is added.


2010-11-23 Roman
- DAQ.BFN: Translation to Russian and Ukrainian is added. Version 0.5.0 is released.
- SYS: TSYS::time2str() function based on POSIX strftime() is added.
- FIX:Transport.Sockets, Transport.SSL: Input buffer clear before send request is added to output transport.
    Use for prevent data getting from previous broken request on too latent connections.
- UI.VCAEngine: Context help is added for attributes of primitive "Media".


2010-11-22 Roman
- FIX:DOC: openscada.pdf, DAQ.ModBus::about.pdf, UI.VCAEngine::about.pdf, UI.WebUser::about.pdf:
    The documents is fixed for some content and translation bugs.
- SYS.ModSched: Errors into shared libraries processing is fixed.
- UI.VCAEngine: Context help is added for attributes of primitives: "FormEl" and "Text".


2010-11-19 Roman
- DB.MySQL: Timeouts set support is added.