@@ -1,6 +1,7 @@
 2010-12-01 Roman
 - DAQ.BFN: Some fixes and debug disable.
 - FIX:UI.VCAEngine: Parent widget name set is fixed for included widget's copy of a template page.
+- UI.VCAEngine: Context help is added for attributes 'lev' and 'tSize' of primitive "Protocol".
 
 
 2010-11-30 Roman
